2014-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tsd.c: Implement TSD for "pure" OpenMP mode without
	relying on POSIX or WIN32 TSD APIs.

	* magick/semaphore.c: Implement OpenMP-based locking so that code
	can compile in a "pure" OpenMP mode without relying on POSIX or
	WIN32 locking APIs.

	* configure.ac: --without-threads no longer disables use of
	OpenMP.  Use the already existing option --disable-openmp to
	disable OpenMP.

2014-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h: Support use of clang/llvm __attribute__ and
	__builtin extensions similar to the existing support for GCC.

2014-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (thumbnail): New method for fast image
	resizing, particularly to make thumbnails.

	* coders/gif.c: Log when Netscape loop exension is read and
	written.

	* coders/png.c (WriteOnePNGImage): In optimize mode, disable matte
	channel immediately if there are no non-opaque pixels.  Also added
	some useful logging.  Resolves SourceForge issue #252 "convert an
	8bit PNG result in a corrupted image ".

	* wand/magick_wand.c (MagickSetImageGravity): New Wand method to
	set image gravity.
	(MagickGetImageGravity): New wand method to get image gravity.

2014-01-02  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Use libpng function
	png_set_strip_16_to_8() when scaling 16-bit input PNG down to
	8-bit in a Q8 build.  The png_set_scale_16_to_8() function is
	more accurate, but the slight difference causes reference tests
	to fail and causes unexpected difference between the behavior
	of PNG and other formats.  If png_set_strip_16_to_8() is not
	supported in libpng, then we use png_set_scale_16_to_8() if
	that is available.

2014-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* INSTALL-windows.txt: Update for 2014.

	* INSTALL-unix.txt: Update for 2014.

	* Copyright.txt: Update for 2014.
