@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2014-01-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pnm.c (ReadPNMImage): Fix scaling of alpha in sub-ranged
+pixels.  Addresses SourceForge issue #237 &quot;Incorrect MAXVAL
+scaling when reading PAM images&quot;, which was not fully fixed in by
+the previous attempt.</li>
+</ul>
+</blockquote>
 <p>2014-01-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
